# demos

prefect/hello-prefect/: flow.py  pyproject.toml
prefect/modular/: Dockerfile  flow.py  setup.py
